2014-10-15  Georg-Johann Lay  <avr@gjlay.de>

	Make clean-up.  Use "+r" to constrain regs in exit.c.

	* logging.c (perf_instruction): Read SP via log_cpu_address.
	* avrtest.c (log_cpu_address): More AR_* address ranges.
	(log_data_write_byte, addr_TICKS_PORT, log_data_read_byte)
	(addr_SP, log_put_word_reg, log_data_write_word): Remove.
	* testavr.h: Same.
	(AR_REG, AR_RAM, AR_FLASH, AR_EEPROM, AR_SP, AR_TICKS_PORT): New.

2014-10-15  Georg-Johann Lay  <avr@gjlay.de>

	Support BREAK and PERF_START_CALL.

	* avr-opcode.def (BREAK): New.
	* avrtest.c (func_BREAK): New.
	* avrtest.h (PERF_START_CALL): New.
	* logging.h (perfs_t.call_only): New.
	* loggin.g.c (print_tag): Tidy.
	(do_log_port_cmd, perf_start, perf_stop, perf_instructions):
	Handle PERF_START_CALL.

2014-10-14  Georg-Johann Lay  <avr@gjlay.de>

	Postpone writing EXIT_PORT from exit to .fini1.

	* dejagnuboards/exit.c (putchar_exit_c, init_exit_c, file_exit_c)
	(init_args): Rename...
	(avrtest_fputc, avrtest_init_stream, avrtest_output_stream)
	(avrtest_init_argc_argv): ...to these.
	(avrtest_output_stream): Use FDEV_SETUP_STREAM to initialize.
	(avrtest_exit_code): New variable.
	(exit): Set it.  And jump to _exit.
	(avrtest_fini1): New .fini1 function.

2014-10-13  Georg-Johann Lay  <avr@gjlay.de>

	Load EEPROM, -v option (verbose), more TICKS_PORT.

	* optiond.def (-v): New option.
	* load-flash.c (load_elf): Load .eeprom section to eeprom.
	[-v]: Print PHDR.
	(decode_flash): Only decode from program code_start to code_end.
	* testavr.h (MAX_EEPROM_SIZE): New define.
	(program_t, program, flush_ticks_port): New type and protos.
	* logging.c (ticks_port_t, ticks_port): New type and variable.
	(flush_ticks_port, do_ticks_cmd): New functions.
	(do_log_dump): Handle TICKS_*_CMD.
	* avrtest.h (TICKS_IS_RAND_CMD, TICKS_RESET_CMD, TICKS_IS_CYCLES_CMD)
	(TICKS_IS_INSNS_CMD, TICKS_IS_PRAND_CMD, TICKS_RESET_ALL_CMD)
	(TICKS_IS_RAND, TICKS_RESET, TICKS_IS_CYCLES, TICKS_IS_INSNS)